--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "@ZenikaIT",
   "dependencies": {
     "body-parser": "~1.14.1",
+    "cors": "^2.8.5",
     "express": "~4.13.3",
     "lodash": "~4.17.4"
   }
